--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,52 @@
 {
     "cSpell.ignoreWords": [
         "a",
+        "ab",
+        "addcart",
+        "addproduct",
+        "addproducts",
+        "adress",
+        "anu",
+        "app",
+        "appspot",
+        "aysnchronous",
         "ba",
         "br",
         "card",
+        "cartproducts",
+        "cashout",
+        "chec",
         "com",
         "dgoawu",
+        "dont",
+        "ecommerce",
+        "entypo",
+        "firebaseapp",
+        "firestore",
+        "gcurs",
         "helloworld",
+        "iw",
         "iza",
+        "jgwk",
+        "jp",
+        "key",
+        "leftside",
+        "link",
         "list",
+        "loginin",
         "m",
         "morogoro",
+        "mybtn",
+        "na",
         "native",
+        "navbox",
+        "navlinks",
         "nw",
         "o",
         "pg",
+        "public",
         "react",
+        "rightside",
         "s",
         "screen",
         "sd",
@@ -25,8 +56,12 @@
         "swiper",
         "sy",
         "taifa",
+        "us",
         "vd",
+        "vp",
         "x",
-        "xc"
+        "xc",
+        "xx",
+        "yfxm"
     ]
 }
