--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://localhost:5000",
   "scripts": {
+    "server": "nodemon server.js",
     "start": "expo start",
+    "build": "webpack --mode production",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -9,22 +12,38 @@
     "pod": "npx pod-install ios"
   },
   "dependencies": {
+    "@chec/commerce.js": "^2.6.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@react-navigation/bottom-tabs": "^6.0.0-next.3",
     "@react-navigation/drawer": "^6.0.0-next.3",
     "@react-navigation/material-bottom-tabs": "^6.0.0-next.1",
     "@react-navigation/material-top-tabs": "^6.0.0-next.4",
     "@react-navigation/native": "^6.0.0-next.1",
     "@react-navigation/stack": "^6.0.0-next.8",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.1",
     "chart.js": "^3.1.0",
     "expo": "^40.0.1",
     "expo-crypto": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "express": "^4.17.1",
+    "firebase": "^8.6.2",
+    "get-google-fonts": "^1.2.2",
+    "mongoose": "^5.12.8",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "oauth": "^0.9.15",
     "radio-buttons-react-native": "^1.0.4",
     "react": "^16.13.1",
     "react-chart js-2": "^2.11.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.6.3",
+    "react-icons-kit": "^1.3.1",
+    "react-modal": "^3.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-date-picker": "^3.3.0",
@@ -44,15 +63,28 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-shopping-cart": "^1.9.5",
+    "react-thunk": "^1.0.0",
+    "react-toastify": "^7.0.4",
     "react-verification-code-input": "^1.2.9",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.16",
     "swiper": "^6.5.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   },
   "private": true
 }
