--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mygas",
-    "slug": "mygas",
+    "name": "12345678910",
+    "slug": "12345678910",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
